css/cms-tweaks.css
.cms-logo span {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
}

.pull-right {
    float: right!important;
}

.cms .cms-content-fields.panel--scrollable {
    overflow-y: scroll;
}

/* Hide TinyMCE branding */
.mce-branding-powered-by {
    display: none!important;
}

.tab-right {
    order: 99;
}

@media (min-width: 768px) {
    .tab-right {
        margin-left: auto !important;
    }
}

.ss-toggle .ui-accordion-content {
    padding: 15px;
}

.counter-container {
    position: relative;
}

/* Meta Title / Description counters */
.counter-container .charcounter {
    display: none;
}
.counter-container.counter-visible .charcounter {
    position: absolute;
    display: block;
    top: -22px;
    right: 22px;
    background: rgba(0,0,0,0.5);
    color: #fff;
    padding: 2px 5px;
    border-radius: 10px;
    font-size: 80%;
}

